fix datetime type in animal.cs

--- a/AnimalShelter/Views/Animals/Index.cshtml
+++ b/AnimalShelter/Views/Animals/Index.cshtml
@@ -15,8 +15,8 @@
 
 @foreach (Animal animal in Model) 
 {
-    @* <li>@Html.ActionLink($"{animal.Name}", "Details", new { id = animal.AnimalId}), @animal.Breed </li> *@
-    <li>@animal.Type  @animal.Breed  @animal.Name  Admitted: @animal.Date </li>
+    <li>@Html.ActionLink($"{animal.Name}", "Details", new { id = animal.AnimalId}), @animal.Breed </li>
+    @* <li>@animal.Type  @animal.Breed  @animal.Name  Admitted: @animal.Date </li> *@
 }
 
 <p>@Html.ActionLink("Add an animal!", "Create")</p>
