BUGFIX: route to results using view not redirect for search

--- a/AnimalShelter/Views/Animals/Details.cshtml
+++ b/AnimalShelter/Views/Animals/Details.cshtml
@@ -12,4 +12,8 @@
     @Model.Date <br>
 </p>
 
+@Html.ActionLink("Go back to all animals", "Index")
+<br>
+@Html.ActionLink("Back to Homepage", "Index", "Home")
+
 
