--- a/AnimalShelter/Views/Home/Index.cshtml
+++ b/AnimalShelter/Views/Home/Index.cshtml
@@ -4,3 +4,4 @@
 
 <h1>Welcome to Animal Shelter Backend!</h1>
 <p>@Html.ActionLink("See all animals!", "Index", "Animals")</p> 
+<p>@Html.ActionLink("Search an animal...?", "Search", "Animals")</p>
